--- a/_talks/Obelix_18_03_2021.md
+++ b/_talks/Obelix_18_03_2021.md
@@ -1,10 +1,8 @@
 ---
 title: "Continuous CO-Optimal Transport: A relaxation of Gromov-Wasserstein distance"
-collection: talks
-type: "Talk"
 venue: "OBELIX - Université Bretagne Sud"
 date: 18-03-2021
-location: "France"
+location: "Vannes, France"
 ---
 
 In practical applications, the Gromov-Wasserstein (GW) distance provides a way to compare similarity matrices. However, this associates to two potential limitations: first, the similarity matrix is not always computationally feasible and necessarily meaningful, and second, to the limit, GW distance is only able to compare square matrices. CO-Optimal Transport (COOT) resolves these drawbacks and allows matrices of arbitrary size as inputs. On the other hand, its formulation remains only available in the discrete case. The very first continuous version of COOT is known as GW’s third lower bound. Despite of its practical usefulness, little has been known about its theoretical properties.In this presentation, we formulate the COOT problem in the general case (thus unifies both GW’s lower bound and COOT), under both balanced and unbalanced settings. Then we present some preliminary results, namely metric and convergence properties, and illustrate its application in heterogeneous domain adaptation. Finally, we discuss some open questions on various aspects: theoretical, statistical, numerical, as well as some potential applications.
