--- a/_talks/Obelix_18_03_2021.md
+++ b/_talks/Obelix_18_03_2021.md
@@ -1,5 +1,6 @@
 ---
 title: "Continuous CO-Optimal Transport: A relaxation of Gromov-Wasserstein distance"
+type: "Talk"
 venue: "OBELIX - Université Bretagne Sud"
 date: 18-03-2021
 location: "Vannes, France"
